Fix dark mode for Differential revision history selector
Summary:
Replace hardcoded colors of `differential-update-history-*` with variables.

Refs T15056

Test Plan:
* Go to http://phorge.localhost/settings/panel/display/ and set Accessibility to Dark Mode (Experimental)
* Have a patch `D1` in Differential with several revisions
* On http://phorge.localhost/D1, go to the "Revision Contents" box and select the "History" tab, look at the diff selector table on the right

Reviewers: O1 Blessed Committers, valerio.bozzolan

Reviewed By: O1 Blessed Committers, valerio.bozzolan

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26212

--- a/webroot/rsrc/css/application/differential/revision-history.css
+++ b/webroot/rsrc/css/application/differential/revision-history.css
@@ -30,11 +30,11 @@
 }
 
 .aphront-table-view td.differential-update-history-old {
-  background: #f9d0d0;
+  background: {$diff.update-history-old};
 }
 
 .aphront-table-view td.differential-update-history-new {
-  background: #d0ffd0;
+  background: {$diff.update-history-new};
 }
 
 .aphront-table-view
@@ -43,7 +43,7 @@
 .aphront-table-view
   .alt-differential-update-history-old-now
   td.differential-update-history-old {
-  background: #ffaaaa;
+  background: {$diff.update-history-old-now};
 }
 
 .aphront-table-view
@@ -52,5 +52,5 @@
 .aphront-table-view
   .alt-differential-update-history-new-now
   td.differential-update-history-new {
-  background: #aaffaa;
+  background: {$diff.update-history-new-now};
 }
